--- a/package.json
+++ b/package.json
@@ -33,12 +33,15 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.1.0",
     "@testing-library/user-event": "^12.0.11",
-    "babel-jest": "^26.1.0",
+    "axios-mock-adapter": "^1.22.0",
+    "babel-jest": "^26.6.3",
     "bootstrap": "^5.3.2",
     "jest": "^26.1.0",
     "jest-environment-jsdom": "^27.5.1",
+    "jest-fetch-mock": "^3.0.3",
     "jest-html-reporter": "^3.1.3",
     "jquerry": "^0.0.1-security",
-    "react-test-renderer": "^18.2.0"
+    "react-test-renderer": "^18.2.0",
+    "supertest": "^6.3.4"
   }
 }
